Fix scrollbar on Windows

--- a/src/components/modal/v2/parts/views/NI/styles.scss
+++ b/src/components/modal/v2/parts/views/NI/styles.scss
@@ -1,3 +1,4 @@
+@import '../../../styles/globals/variables';
 @import '../../../styles/globals/mixins';
 @import '../../../styles/globals/colors';
 
@@ -70,34 +71,41 @@
                     width: 100%;
                 }
             }
+            .button__fixed-wrapper {
+                @include tablet {
+                    @include fixedWrapper;
+
+                    bottom: 5vh;
+                    border-radius: 0 0 $content-wrapper-border-radius $content-wrapper-border-radius;
+                    overflow: hidden;
+
+                    .lander & {
+                        bottom: 0;
+                        border-radius: 0;
+                    }
+                }
+
+                @include mobile {
+                    @include fixedWrapper;
+                    bottom: 0;
+                }
+            }
+
             .button__container {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+
                 @include tablet {
-                    position: fixed;
-                    left: calc(50% - 640px / 2);
-                    bottom: 5vh;
-                    width: calc(100%);
                     background: white;
-                    border-radius: 0 0 10px 10px;
                     margin-bottom: 0;
                     max-width: 640px;
                     padding: 15px 0;
                     .button {
                         width: calc(80%);
                     }
-
-                    .lander & {
-                        bottom: 0;
-                        border-radius: 0px;
-                    }
                 }
                 @include mobile {
-                    position: fixed;
-                    bottom: 0;
-                    left: 0;
-                    width: calc(100%);
                     background: white;
                     margin-bottom: 0;
                     max-width: 640px;
