--- a/src/components/modal/v2/styles/globals/_mixins.scss
+++ b/src/components/modal/v2/styles/globals/_mixins.scss
@@ -22,3 +22,36 @@
         @content;
     }
 }
+
+// Styles to created a fixed element that spans the full width of
+// the modal body content wrapper that accounts for the difference
+// between scrollbars across Windows and MacOS
+@mixin fixedWrapper {
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    display: flex;
+    // Prevent the wrapper from intercepting click events from the scrollbar
+    pointer-events: none;
+
+    @include tablet {
+        max-width: $content-wrapper-max-width-tablet;
+    }
+
+    @include desktop {
+        max-width: $content-wrapper-max-width-desktop;
+    }
+
+    :first-child {
+        pointer-events: all; // Enable pointer events for portion not blocking the scrollbar
+        flex: 1 1 100%;
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        visibility: hidden;
+        overflow-y: scroll;
+    }
+}
