--- a/src/components/modal/v2/styles/globals/_variables.scss
+++ b/src/components/modal/v2/styles/globals/_variables.scss
@@ -4,3 +4,4 @@ $sticky-header-radius: 40px;
 
 $content-wrapper-max-width-tablet: 640px;
 $content-wrapper-max-width-desktop: 840px;
+$content-wrapper-border-radius: 10px;
